--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@riotjs/cli": "^4.0.2",
-    "@riotjs/compiler": "^4.3.10",
+    "@riotjs/compiler": "https://github.com/riot/compiler.git#dev",
     "node-sass": "^4.12.0",
     "pug": "^2.0.4",
     "rollup": "^1.19.4",
