--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "postinstall": "cd node_modules/@riotjs/compiler && yarn install && yarn build"
   },
   "dependencies": {
+    "@mojs/core": "dkzlv/mojs",
+    "bulma": "^0.7.5",
     "normalize.css": "^8.0.1",
     "riot": "^4.4.0"
   },
@@ -22,6 +24,7 @@
     "node-sass": "^4.12.0",
     "pug": "^2.0.4",
     "rollup": "^1.19.4",
+    "rollup-plugin-alias": "^1.5.2",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.2",
     "rollup-plugin-generate-html-template": "^1.2.0",
