--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@riotjs/cli": "^4.0.2",
-    "@riotjs/compiler": "riot/compiler#dev",
+    "@riotjs/compiler": "^4.3.11",
     "node-sass": "^4.12.0",
     "pug": "^2.0.4",
     "rollup": "^1.19.4",
